# ife_surrogate

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: conf.py  documentation.txt  index.rst  requirements.txt
docs/_static/: custom_sidebar.css  hover.css
docs/api/: gp.rst  utils.rst
docs/api/gp/: kernels.rst  models.rst  trainers.rst
docs/start/: creating_custom_kernels.rst  creating_custom_models.rst  getting_started.rst  guide_to_trainers.rst  trainer_guide.rst
ife_surrogate/: __init__.py
ife_surrogate/gp/kernels/: __init__.py  compound_kernels.py  fixed_kernel.py  kernel.py  matern.py  rbf.py
ife_surrogate/gp/models/: gp_model.py  multi_output_gp.py  scalar_gp.py
ife_surrogate/gp/trainers/: optax_trainer.py  swarm_trainer.py
ife_surrogate/utils/: data_loader.py  decorators.py  preprocessing.py
src/ife_surrogate/gp/: __init__.py  inference.py  likelihood.py  train.py
src/ife_surrogate/gp/kernels/: kriging_kernel.py  noise.py  rational_quadratic.py  scale.py
src/ife_surrogate/gp/models/: __init__.py  wideband_gp.py
src/ife_surrogate/gp/trainers/: __init__.py  trainer.py
src/ife_surrogate/utils/: __init__.py  fsv.py  metrics.py
src/ife_surrogate/utils/plotting/: visualizer.py
